--- a/about.yml
+++ b/about.yml
@@ -2,3 +2,4 @@ layout: page
 title: "About"
 permalink: /about/
 This project is to protect trade secrect with the IT tools.
+Co-authored-by: Daego<daego@163.com>
