--- a/20230224brief.yml
+++ b/20230224brief.yml
@@ -1,7 +1,7 @@
 layout: post
 title: "BRIEF"
-date: 2023-02-24 hh:mm:ss 19:00:00
-categories: CATEGORY-1 CATEGORY-2
+date: 2023-02-24 19:00:00 -0000
+categories: 2023 brief
 每周商业秘密保护简报|Brief of Trade Secrect Proecting
 
 2023-2-24发布:
